tg-6434 [BE] Agregar traducciones de properties de cache de Snomed

--- a/back-end/hospital-api/src/main/resources/messages_es.properties
+++ b/back-end/hospital-api/src/main/resources/messages_es.properties
@@ -264,6 +264,8 @@ ws.snowstorm.params.limit=Parámetro para consulta a servicio Conceptos que indi
 ws.snowstorm.params.termActive=Parámetro para consulta a servicio Conceptos que indica si el termino a buscar debe estar activo.
 ws.snowstorm.auth.language=Header que indica el lenguaje de los resultados.
 ws.snowstorm.url.concepts=URL relativa para consumir el servicio de Conceptos a buscar.
+ws.snowstorm.request.timeout=Tiempo en milisegungos hasta arrojar un timeout en la búsqueda de conceptos Snomed.
+ws.snowstorm.searchLocally.enabled=Determina si las búsquedas de conceptos Snomed se hacen de forma local o consultando al servicio de Snowstorm.
 
 snomed-semantics.diagnosis.ecl=Ecl para búsqueda de diagnósticos.
 snomed-semantics.bloodType.ecl=Ecl para búsqueda de tipos de sangre.
@@ -306,6 +308,15 @@ scheduledjobs.updateethnicities.hours=Configura las horas del cron usado para la
 scheduledjobs.updateethnicities.dayofmonth=Configura el dia del mes del cron usado para la actualización de las etnias.
 scheduledjobs.updateethnicities.month=Configura el mes del cron usado para la actualización de las etnias.
 scheduledjobs.updateethnicities.dayofweek=Configura el dia de la semana del cron usado para la actualización de las etnias.
+
+scheduledjobs.updatesnomedcache.enabled=Des/habilitar la actualización de grupos de conceptos Snomed.
+scheduledjobs.updatesnomedcache.eclkeys=Claves de los grupos de conceptos Snomed, separadas por comas (ej. BLOOD_TYPE,FAMILY_RECORD)
+scheduledjobs.updatesnomedcache.seconds=Configura los segundos del cron usado para la actualización de grupos de conceptos Snomed.
+scheduledjobs.updatesnomedcache.minutes=Configura los minutos del cron usado para la actualización de grupos de conceptos Snomed.
+scheduledjobs.updatesnomedcache.hours=Configura las horas del cron usado para la actualización de grupos de conceptos Snomed.
+scheduledjobs.updatesnomedcache.dayofmonth=Configura el dia del mes del cron usado para la actualización de grupos de conceptos Snomed.
+scheduledjobs.updatesnomedcache.month=Configura el mes del cron usado para la actualización de grupos de conceptos Snomed.
+scheduledjobs.updatesnomedcache.dayofweek=Configura el dia de la semana del cron usado para la actualización de grupos de conceptos Snomed.
 
 monitoring.rest-client.storage.enable=Activa el almacenamiento de la información medida cuando se realizan request a servicios externos.
 api-key.header=Define el nombre del header donde se espera recibir los api-key
