tg-6416. [FE] Crear componente/vista de un turno asignado

--- a/front-end/apps/projects/hospital/src/assets/i18n/pacientes/es-AR.json
+++ b/front-end/apps/projects/hospital/src/assets/i18n/pacientes/es-AR.json
@@ -1,5 +1,8 @@
 {
     "pacientes": {
+        "assigned-appointment": {
+            "LICENSE_NUMBER_ACRONYM": "MN N°"
+        },
         "form": {
             "ADDRESS": "Domicilio",
             "ADDRESS_APARTMENT": "Departamento",
