tg-6415. [FE] Crear componente de "turnos asignados"

--- a/front-end/apps/projects/hospital/src/assets/i18n/pacientes/es-AR.json
+++ b/front-end/apps/projects/hospital/src/assets/i18n/pacientes/es-AR.json
@@ -3,6 +3,10 @@
         "assigned-appointment": {
             "LICENSE_NUMBER_ACRONYM": "MN N°"
         },
+        "assigned-appointments": {
+            "TITLE": "Turnos asignados",
+            "WITHOUT_APPOINTMENTS_MESSAGE": "Sin turnos asignados"
+        },
         "form": {
             "ADDRESS": "Domicilio",
             "ADDRESS_APARTMENT": "Departamento",
