tg-6508 [FE] Cambios en la información ambulatoria del paciente

--- a/front-end/apps/projects/hospital/src/assets/i18n/ambulatoria/es-AR.json
+++ b/front-end/apps/projects/hospital/src/assets/i18n/ambulatoria/es-AR.json
@@ -35,6 +35,7 @@
                 },
                 "GROUP_AND_FACTOR": "Grupo y factor",
                 "SANGUINEOUS": "sanguíneo",
+				"WITHOUT_BLOOD_DATA": "Sin grupo y factor sanguíneo registrado",
                 "internment": {
                     "COVERAGE_TITLE": "Cobertura del episodio",
                     "AFFILIATE_NUMBER": "Afiliado N°:",
