tg-6539 [BE/FE] Agrega soporte para poder visualizar evoluciones sin diagnósticos

--- a/front-end/apps/projects/hospital/src/assets/i18n/internacion/es-AR.json
+++ b/front-end/apps/projects/hospital/src/assets/i18n/internacion/es-AR.json
@@ -278,9 +278,12 @@
 		"documents-summary": {
 			"search-fields": {
 				"DIAGNOSIS": "Diagnóstico",
-				"DOCTOR": "Médico",
+				"PROFESSIONAL": "Profesional",
 				"CREATEDON": "Fecha",
 				"ALL": "Todos"
+			},
+			"info": {
+				"WITHOUT_DIAGNOSIS": "Sin diagnóstico definido"
 			}
 		},
 		"nota-evolucion": {
