tg-6552 [FE] Agregar boton para desplegar menu de popup

--- a/front-end/apps/projects/hospital/src/assets/i18n/ambulatoria/es-AR.json
+++ b/front-end/apps/projects/hospital/src/assets/i18n/ambulatoria/es-AR.json
@@ -568,6 +568,9 @@
             "ANSWER_CONTENT": "¿Desea continuar de todos modos?",
             "CONFIRM_BUTTON": "Si, descartar y continuar",
             "CANCEL_BUTTON": "No, regresar y completar"
-        }
+        },
+		"dialog-title":{
+			"DIET": "Dieta"
+		}
     }
 }
