tg-6537 Bug scroll superposición con agendas bloqueadas

--- a/front-end/apps/projects/hospital/src/assets/i18n/turnos/es-AR.json
+++ b/front-end/apps/projects/hospital/src/assets/i18n/turnos/es-AR.json
@@ -29,7 +29,8 @@
 				"EDIT": "Editar atención"
 			},
 			"messages": {
-				"SUCCESS": "La agenda se guardó exitosamente"
+				"SUCCESS": "La agenda se guardó exitosamente",
+				"TURN_ERROR": "Error: Superposición de rango horario en consultorio"
 			}
 		},
 		"delete-agenda": {
