tg-6553 [FE] Agregar pop-up dieta

--- a/front-end/apps/projects/hospital/src/assets/i18n/ambulatoria/es-AR.json
+++ b/front-end/apps/projects/hospital/src/assets/i18n/ambulatoria/es-AR.json
@@ -17,6 +17,16 @@
         "historia-clinica-externa": {
             "TITLE": "Ver historia clínica externa"
         },
+		"dialogs": {
+			"diet":{
+				"TITLE": "agregar dieta",
+				"DESCRIPTION": "Descripción",
+				"messages": {
+                    "ERROR": "Error al guardar una nueva dieta",
+                    "SUCCESS": "La dieta se guardó exitosamente"
+                }
+			}
+		},
         "paciente": {
             "TITLE": "Historia Clínica",
             "card": {
