tg-6534 [FE] Crea card de indicaciones de internación

--- a/front-end/apps/projects/hospital/src/assets/i18n/ambulatoria/es-AR.json
+++ b/front-end/apps/projects/hospital/src/assets/i18n/ambulatoria/es-AR.json
@@ -477,7 +477,10 @@
             },
             "indications": {
                 "TAB_LABEL": "Indicaciones",
-                "TITLE": "Indicaciones"
+                "TITLE": "Indicaciones",
+				"internment-card": {
+					"TITLE": "Indicaciones de internación"
+				}
             },
             "internacion": {
                 "TAB_LABEL": "Internación"
