tg-6609 [FE] Agrega la visualización de los días

--- a/front-end/apps/projects/hospital/src/assets/i18n/ambulatoria/es-AR.json
+++ b/front-end/apps/projects/hospital/src/assets/i18n/ambulatoria/es-AR.json
@@ -479,7 +479,10 @@
                 "TAB_LABEL": "Indicaciones",
                 "TITLE": "Indicaciones",
 				"internment-card": {
-					"TITLE": "Indicaciones de internación"
+					"TITLE": "Indicaciones de internación",
+                    "TODAY": "Hoy, ",
+                    "YESTERDAY": "Ayer, ",
+                    "TOMORROW": "Mañana, "
 				}
             },
             "internacion": {
