tg-6623 [FE] Cambia el titulo del card "Medicación"

--- a/front-end/apps/projects/hospital/src/assets/i18n/ambulatoria/es-AR.json
+++ b/front-end/apps/projects/hospital/src/assets/i18n/ambulatoria/es-AR.json
@@ -371,7 +371,7 @@
             "ordenes_prescripciones": {
                 "TAB_LABEL": "Órdenes y prescripciones",
                 "TITLE": "Órdenes y prescripciones",
-                "MEDICACION": "Medicación",
+                "MEDICACION": "Medicación  ambulatoria",
                 "RECOMENDACIONES": "Recomendaciones generales",
                 "ESTUDIOS": "Estudios",
                 "SIN_RECETA": "Sin receta",
