--- a/front-end/apps/projects/hospital/src/assets/i18n/pacientes/es-AR.json
+++ b/front-end/apps/projects/hospital/src/assets/i18n/pacientes/es-AR.json
@@ -193,7 +193,7 @@
         },
         "card_roles": {
             "ROL_COLUMN": "Rol",
-            "CLINIC_COLUMN": "Clínica",
+            "INSTITUTION_COLUMN": "Institución",
             "WITHOUT_ROLES": "Sin roles asignados."
         },
         "emergency_care_episode_sumamry": {
