tg-6646. [FE] Reubicar traducciones del componente que se reubicó en el módulo de historia clínica

--- a/front-end/apps/projects/hospital/src/assets/i18n/historia-clinica/es-AR.json
+++ b/front-end/apps/projects/hospital/src/assets/i18n/historia-clinica/es-AR.json
@@ -26,6 +26,18 @@
 		"snowstorm": {
 			"SERVICE_NOT_AVAILABLE": "El servicio externo no está disponible en este momento, por favor intente más tarde.",
 			"CONCEPTS_COULD_NOT_BE_OBTAINED": "Los conceptos de SNOMED no pudieron ser obtenidos."
+		},
+		"factores-de-riesgo-form": {
+			"TITLE": "Factores de Riesgo",
+			"HEART_RATE": "Frecuencia cardíaca (/min)",
+			"RESPIRATORY_RATE": "Frecuencia respiratoria (/min)",
+			"TEMPERATURE": "Temperatura corporal",
+			"BLOOD_OXYGEN_SATURATION": "Saturación de oxigeno (%)",
+			"SYSTOLIC_BLOOD_PRESSURE": "Tensión sistólica (mm)",
+			"DIASTOLIC_BLOOD_PRESSURE": "Tensión diastólica (mm)",
+			"BLOOD_GLUCOSE": "Glucemia (mg/dl)",
+			"GLYCOSYLATED_HEMOGLOBIN": "Hemoglobina glicosilada (%)",
+			"CARDIOVASCULAR_RISK": "Riesgo cardiovascular (%)"
 		}
 	}
 }
