tg-6654. [FE] Agregar errores debajo de los campos del formulario de carga de factores de riesgo

--- a/front-end/apps/projects/hospital/src/assets/i18n/historia-clinica/es-AR.json
+++ b/front-end/apps/projects/hospital/src/assets/i18n/historia-clinica/es-AR.json
@@ -37,7 +37,8 @@
 			"DIASTOLIC_BLOOD_PRESSURE": "Tensión diastólica (mm)",
 			"BLOOD_GLUCOSE": "Glucemia (mg/dl)",
 			"GLYCOSYLATED_HEMOGLOBIN": "Hemoglobina glicosilada (%)",
-			"CARDIOVASCULAR_RISK": "Riesgo cardiovascular (%)"
+			"CARDIOVASCULAR_RISK": "Riesgo cardiovascular (%)",
+			"MAX_TWO_DECIMAL_DIGITS": "El valor debe tener máximo 2 cifras decimales"
 		}
 	}
 }
