tg-6612 [FE] Agrega la visualizacion de las dietas

--- a/front-end/apps/projects/hospital/src/assets/i18n/ambulatoria/es-AR.json
+++ b/front-end/apps/projects/hospital/src/assets/i18n/ambulatoria/es-AR.json
@@ -503,6 +503,10 @@
 							"PARENTERAL_PLAN": "Sin planes parenterales indicados.",
 							"PHARMACO": "Sin fármacos indicados.",
 							"OTHER_INDICATION": "Sin otras indicaciones."
+						},
+						"label": {
+							"SUSPENDED": "Suspendida",
+							"INDICATED": "Indicada"
 						}
 					}
 				}
