tg-6670 [FE] Crea componente de presentación para la visualización de las indicaciones

--- a/front-end/apps/projects/hospital/src/assets/i18n/indicacion/es-AR.json
+++ b/front-end/apps/projects/hospital/src/assets/i18n/indicacion/es-AR.json
@@ -20,6 +20,13 @@
 				"label": {
 					"SUSPENDED": "Suspendida",
 					"INDICATED": "Indicada"
+				},
+				"indication-extra-description": {
+					"DOSE": "Dosis:",
+					"VIA": "Vía:",
+					"INTERVAL": "Intervalo:",
+					"ONCE": "Única vez",
+					"EVENT": "Ante evento:"
 				}
 			}
 		}
