tg-6752 [FE] Agrega al archivo de traducciones de indicaciones lo especificado para dietas

--- a/front-end/apps/projects/hospital/src/assets/i18n/indicacion/es-AR.json
+++ b/front-end/apps/projects/hospital/src/assets/i18n/indicacion/es-AR.json
@@ -28,6 +28,19 @@
 					"ONCE": "Única vez",
 					"EVENT": "Ante evento:"
 				}
+			},
+			"menu-items": {
+				"DIET": "Dieta"
+			},
+			"dialogs": {
+				"diet":{
+					"TITLE": "agregar dieta",
+					"DESCRIPTION": "Descripción",
+					"messages": {
+						"ERROR": "Error al guardar una nueva dieta",
+						"SUCCESS": "La dieta se guardó exitosamente"
+					}
+				}
 			}
 		}
 	}
