tg-5377 [P2] Validar turno desde BE

--- a/back-end/hospital-api/src/main/resources/messages_en.properties
+++ b/back-end/hospital-api/src/main/resources/messages_en.properties
@@ -137,6 +137,8 @@ diary.period.invalid.year=The period for the diary must correspond to the same c
 diary.period.invalid.overlap=A similar agenda already exists defined in an overlapping period of time
 diary.attention.invalid.overlap=It is not possible to define overlapping opening hours
 diary.attention.no-opening-hours=At least on opening hour range must be selected
+diary.attention.invalid.spontaneous-with-overturn=It is not possible to create a diary with spontaneous shifts with overturns
+diary.attention.invalid.overturn-value-negative=Overturns cannot be negative
 
 ####### Appointments #######
 appointment.error.validation=Error validation
