tg-6756 [FE] Agregar alternativa typeahead para búsqueda de motivos en consulta ambulatoria

--- a/front-end/apps/projects/hospital/src/assets/i18n/ambulatoria/es-AR.json
+++ b/front-end/apps/projects/hospital/src/assets/i18n/ambulatoria/es-AR.json
@@ -110,6 +110,7 @@
                 "motivo": {
                     "TITLE": "Motivo de consulta",
                     "MOTIVO": "motivo",
+					"SEARCH_PLACEHOLDER": "Buscar motivo",
                     "ADD": "Agregar motivo",
                     "table": {
                         "TITLE": "Motivos registrados",
