tg-6755 [FE] Agregar alternativa typeahead para búsqueda de problemas en consulta ambulatoria

--- a/front-end/apps/projects/hospital/src/assets/i18n/ambulatoria/es-AR.json
+++ b/front-end/apps/projects/hospital/src/assets/i18n/ambulatoria/es-AR.json
@@ -141,7 +141,8 @@
                         "ADD": "Agregar problema",
                         "SAVE": "Guardar cambios"
                     },
-                    "CONCEPT_LABEL": "Problema",
+					"CONCEPT_LABEL": "Problema",
+					"SEARCH_PLACEHOLDER": "Buscar problema",
                     "SEVERIDAD": "Severidad",
                     "CRONICO": "Crónico",
                     "errors": {
