tg-6779 [FE] Agregar alternativa typeahead para búsqueda de antecedentes familiares en consulta ambulatoria

--- a/front-end/apps/projects/hospital/src/assets/i18n/ambulatoria/es-AR.json
+++ b/front-end/apps/projects/hospital/src/assets/i18n/ambulatoria/es-AR.json
@@ -175,6 +175,7 @@
                     },
                     "TITLE": "Antecedentes familiares",
                     "ANTECEDENTES_FAMILIARES": "Antecedentes familiares",
+					"SEARCH_PLACEHOLDER": "Buscar antecedentes familiares",
                     "FECHA": "Fecha de registro"
                 },
                 "antecedentes-personales": {
