tg-6780 [FE] Agregar alternativa typeahead para búsqueda de medicación en consulta ambulatoria

--- a/front-end/apps/projects/hospital/src/assets/i18n/ambulatoria/es-AR.json
+++ b/front-end/apps/projects/hospital/src/assets/i18n/ambulatoria/es-AR.json
@@ -115,6 +115,7 @@
                     "CONCEPT_LABEL": "Medicación habitual",
                     "DESCRIPCION": "Descripción",
                     "NOMBRE_MEDICACION": "Nombre de medicación",
+					"SEARCH_PLACEHOLDER": "Buscar medicación",
                     "OBSERVACIONES": "Observaciones",
                     "SUSPENDIDO": "Suspendido",
                     "TABLE_TITLE": "Medicaciones registradas",
