--- a/front-end/apps/projects/hospital/src/assets/i18n/ambulatoria/es-AR.json
+++ b/front-end/apps/projects/hospital/src/assets/i18n/ambulatoria/es-AR.json
@@ -161,7 +161,8 @@
                     "TABLE_TITLE": "Procedimientos registrados",
                     "TITLE": "Procedimiento",
                     "TIPO": "Tipo de procedimiento",
-                    "PROCEDIMIENTO": "Procedimiento"
+					"PROCEDIMIENTO": "Procedimiento",
+					"SEARCH_PLACEHOLDER": "Buscar procedimiento"
                 },
                 "antecedentes-familiares": {
                     "buttons": {
