tg-6782 [FE] Agregar alternativa typeahead para búsqueda de alergias en consulta ambulatoria

--- a/front-end/apps/projects/hospital/src/assets/i18n/ambulatoria/es-AR.json
+++ b/front-end/apps/projects/hospital/src/assets/i18n/ambulatoria/es-AR.json
@@ -214,9 +214,10 @@
                 "alergias": {
                     "TITLE": "Alergias",
                     "ADD": "Agregar alergia",
-                    "ALLERGY": "Alergia",
+					"ALLERGY": "Alergia",
                     "CRITICALITY": "Criticidad",
-                    "form": {
+					"SEARCH_PLACEHOLDER": "Buscar alergia",
+					"form": {
                         "REGISTRY_DATE": "Fecha registro"
                     },
                     "table": {
