tg-6653 [FE] Agregar pop-up de nueva indicación

--- a/front-end/apps/projects/hospital/src/assets/i18n/ambulatoria/es-AR.json
+++ b/front-end/apps/projects/hospital/src/assets/i18n/ambulatoria/es-AR.json
@@ -544,6 +544,10 @@
             "ANSWER_CONTENT": "¿Desea continuar de todos modos?",
             "CONFIRM_BUTTON": "Si, descartar y continuar",
             "CANCEL_BUTTON": "No, regresar y completar"
-        }
+        },
+		"dialog-title":{
+			"OTHER-INDICATION": "Otra indicación",
+			"DIET": "Dieta"
+		}
     }
 }
