--- a/back-end/hospital-api/src/main/resources/messages_en.properties
+++ b/back-end/hospital-api/src/main/resources/messages_en.properties
@@ -118,6 +118,7 @@ document.pdf.maindiagnosis.title.minsal=Main diagnosis
 ####### Healthcare Professional #######
 healthcareprofessional.exists=This person is already registered as a professional 
 healthcare-professional.specialty-profession-exists=The profession specialty already exists
+healthcare-professional.specialty-profession-not-assigned=The profession specialty is not assigned already
 healthcare-professional.id.error.validation=Only can see own diaries
 
 ####### Outpatient #######
