tg-6659 [FE] Agrega la visualización de Otras Indicaciones

--- a/front-end/apps/projects/hospital/src/assets/i18n/indicacion/es-AR.json
+++ b/front-end/apps/projects/hospital/src/assets/i18n/indicacion/es-AR.json
@@ -30,7 +30,8 @@
 					"DOSE": "Dosis:",
 					"VIA": "Vía:",
 					"INTERVAL": "Intervalo:",
-					"ONCE": "Única vez",
+					"ONCE": "Única vez:",
+					"START_TIME": "Hora de inicio:",
 					"EVENT": "Ante evento:"
 				}
 			},
