tg-6861 [FE] Crea componente que permite editar la fecha de indicacion

--- a/front-end/apps/projects/hospital/src/assets/i18n/es-AR.json
+++ b/front-end/apps/projects/hospital/src/assets/i18n/es-AR.json
@@ -36,7 +36,8 @@
 		"YES": "Si",
 		"SKIP": "Omitir",
 		"RESET": "Restablecer",
-		"SELECT": "Seleccionar"
+		"SELECT": "Seleccionar",
+		"APPLY": "Aplicar"
 	},
 	"forms": {
 		"REQUIRED": "El campo es requerido",
