tg-6863 [FE] Modifica dialogo de confirmación

--- a/front-end/apps/projects/hospital/src/assets/i18n/indicacion/es-AR.json
+++ b/front-end/apps/projects/hospital/src/assets/i18n/indicacion/es-AR.json
@@ -6,6 +6,11 @@
 			"TODAY": "Hoy, ",
 			"YESTERDAY": "Ayer, ",
 			"TOMORROW": "Mañana, ",
+			"INDICATION_DATE": "Fecha de indicación",
+			"buttons": {
+				"CONFIRM": "si, confirmar ",
+				"CANCEL": "no, ajustar fecha"
+			},
 			"sections": {
 				"DIET": "Dieta",
 				"PARENTERAL_PLAN": "Planes parenterales",
