tg-6883 [P1] Se pueden cargar dos diagnósticos no principales iguales

--- a/front-end/apps/projects/hospital/src/assets/i18n/internacion/es-AR.json
+++ b/front-end/apps/projects/hospital/src/assets/i18n/internacion/es-AR.json
@@ -68,6 +68,9 @@
 				"ADD_MAIN_DIAGNOSIS": "+ Agregar diagnóstico principal",
 				"ADD_OTHER_DIAGNOSIS": "+ Agregar otro diagnóstico",
 				"CHANGE_MAIN_DIAGNOSIS": "Cambiar diagnóstico principal",
+				"messages": {
+					"ERROR": "Ha ingresado un diagnóstico duplicado"
+				},
 				"table": {
 					"TITLE": "Diagnósticos seleccionados",
 					"columns": {
