tg-6821 [FE] Agrega la visualización de los planes parenterales

--- a/front-end/apps/projects/hospital/src/assets/i18n/indicacion/es-AR.json
+++ b/front-end/apps/projects/hospital/src/assets/i18n/indicacion/es-AR.json
@@ -28,6 +28,7 @@
 				},
 				"indication-extra-description": {
 					"DOSE": "Dosis:",
+					"VOL/BOLSA": "Vol/Bolsa:",
 					"VIA": "Vía:",
 					"INTERVAL": "Intervalo:",
 					"ONCE": "Única vez:",
