tg-6910 [FE] Crear componente typeahead para la búsqueda de templates y conceptos

--- a/front-end/apps/projects/hospital/src/assets/i18n/historia-clinica/es-AR.json
+++ b/front-end/apps/projects/hospital/src/assets/i18n/historia-clinica/es-AR.json
@@ -47,6 +47,10 @@
 			"QUESTION": "¿Desea incluirlos en la consulta?",
 			"ADD": "SI, INCLUIRLOS",
 			"DISCARD": "NO, DESCARTARLOS"
+		},
+		"template-concept-search": {
+			"TEMPLATE_OPTION_GROUP": "Plantillas",
+			"CONCEPT_OPTION_GROUP": "Conceptos"
 		}
 	}
 }
