tg-6999 [FE] Agrega rol "Administrador de camas"

--- a/front-end/apps/projects/hospital/src/assets/i18n/auth/es-AR.json
+++ b/front-end/apps/projects/hospital/src/assets/i18n/auth/es-AR.json
@@ -70,7 +70,8 @@
 				"ENFERMERO": "Enfermero",
 				"ADMINISTRADOR_INSTITUCIONAL_BACKOFFICE":  "Administrador institucional",
 				"ADMINISTRADOR_AGENDA": "Administrador de agenda",
-				"ESPECIALISTA_EN_ODONTOLOGIA": "Especialista en Odontología"
+				"ESPECIALISTA_EN_ODONTOLOGIA": "Especialista en Odontología",
+				"ADMINISTRADOR_DE_CAMAS": "Administrador de camas"
 			}
 		}
 	}
