tg-6983 [FE] Crear paso de confirmación de orden de internación

--- a/front-end/apps/projects/hospital/src/assets/i18n/ambulatoria/es-AR.json
+++ b/front-end/apps/projects/hospital/src/assets/i18n/ambulatoria/es-AR.json
@@ -535,7 +535,8 @@
 					"HEALTH_PROBLEM": "Diagnóstico asociado",
 					"NOTES": "Observaciones",
 					"NEXT_BUTTON": "Agregar",
-					"TEMPLATE_DETAIL": "Incluye: {{concepts}}."
+					"TEMPLATE_DETAIL": "Incluye: {{concepts}}.",
+                    "CONFIRM_ORDER": "Finalizar orden"
 				}
 			}
 		},
