tg-7002 [BE] Crear endpoint y validaciones para realizar alta fisica.

--- a/back-end/hospital-api/src/main/resources/messages_es.properties
+++ b/back-end/hospital-api/src/main/resources/messages_es.properties
@@ -88,6 +88,7 @@ anamnesis.exist=La internación ya contiene una anamnesis
 epicrisis.exist=La internación contiene un documento de epicrisis
 internment.responsible.doctor.required=Se debe asignar un doctor responsable de la internación
 internmentdischarge.invalid=Una internación sin epicrisis no puede darse de alta
+internmentphysicaldischarge.invalid=No se puede realizar el alta fisica de una internacón sin anamnesis
 patient.discharge.date.before=La fecha de alta probable tiene que ser posterior a la fecha de internación 
 patient.discharge.date.invalid=La fecha de alta probable no puede configurarse cuando se tiene el alta médica 
 
