--- a/back-end/hospital-api/src/main/resources/messages_en.properties
+++ b/back-end/hospital-api/src/main/resources/messages_en.properties
@@ -84,6 +84,7 @@ anamnesis.exist=Internment has an anamnesis yet
 epicrisis.exist=Internment has an epicrisis yet
 internment.responsible.doctor.required=Responsable doctor mandatory
 internmentdischarge.invalid=Can't discharge an internment without an epicrisis
+internmentphysicaldischarge.invalid=Can´t phyiscal discharge an internment without an anamnesis
 patient.discharge.date.before=Probable discharge date have to be before hospitalization date 
 patient.discharge.date.invalid=Probable discharge date cannot be set when the hospitalization finished 
 
