tg-7039 Agrega componente health-insurance

--- a/front-end/apps/projects/hospital/src/assets/i18n/es-AR.json
+++ b/front-end/apps/projects/hospital/src/assets/i18n/es-AR.json
@@ -70,21 +70,27 @@
 		"sponsor_logo": "Sponsor logo"
 	},
 	"medical-coverage": {
+		"HEALTH_INSURANCE": "Obra social",
 		"ACTIVES_HEALTH_INSURANCES": "Obras sociales activas",
 		"ACTIVES_PRIVATE_HEALTH_INSURANCES": "Prepagas activas",
 		"ACTIVES_ART_COVERAGES": "ART activas",
 		"ADD_HEALTH_INSURANCES": "Agregar obra social",
 		"ADD_PRIVATE_HEALTH_INSURANCES": "Agregar prepaga",
+		"NEW_HEALTH_INSURANCE": "Agregar nueva Obra social",
 		"ADD_ART_COVERAGE": "Agregar ART",
-		"NEW_HEALTH_INSURANCES": "Agregar nueva obra social",
 		"NEW_ART_COVERAGES": "Agregar nueva ART",
 		"NEW_PRIVATE_HEALTH_INSURANCES": "Agregar nueva prepaga",
+		"buttons": {
+			"NEW_HEALTH_INSURANCE": "+ Agregar nueva Obra social",
+			"ADD_HEALTH_INSURANCE": "Agregar obra social"
+		},
 		"CUIT_LABEL": "CUIT",
 		"PLAN_LABEL": "Plan",
-		"AFFILIATE_NUMBER_LABEL": "Nro de afiliado",
+		"AFFILIATE_NUMBER_LABEL": "N° de afiliado",
 		"VOLUNTARY": "Voluntaria",
 		"MANDATORY": "Obligatoria",
 		"CUIT_VIEW" : "CUIT: {{cuit}}",
+		"SEARCH_HEALTH_INSURANCE": "Buscar obra social",
 		"SEARCH_ART": "Buscar ART",
 		"ART": "ART"
 	},
